src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

 :root {
  --ifm-color-primary:  var(--telekom-color-primary-standard);
  --font-size: var(--telekom-typography-font-size-caption);
  --font-color: var(--telekom-color-text-and-icon-standard);
  --font-large: var(--telekom-text-style-ui);
  --ifm-navbar-height: 80px;
  font: var(--telekom-text-style-body);
}

@media screen and (max-width: 1039px) {
  :root {
    --ifm-navbar-height: 62px;
    /* here is the different nav height when scrolling */
    /* --ifm-navbar-height--when-scrolling: 62px; */
  }
}

@media screen and (min-width: 1040px) {
  :root {
    --ifm-navbar-height: 85px;
    /* here is the different nav height when scrolling */
    /* --ifm-navbar-height--when-scrolling: 72px; */
  }
}

@media screen and (min-width: 1296px) {
  :root {
    --ifm-navbar-height: 98px;
    /* here is the different nav height when scrolling */
    /* --ifm-navbar-height--when-scrolling: 72px; */
  }
}

@media screen and (min-width: 1680px) {
  :root {
    --ifm-navbar-height: 122px;
    /* here is the different nav height when scrolling */
    /* --ifm-navbar-height--when-scrolling: 72px; */
  }
}

body:not(.navigation-with-keyboard) *:not(input):focus {
  outline: var(--telekom-color-text-and-icon-standard);
}

.menu__link:hover, .menu__caret:hover {
  background: var(--ifm-menu-color-background-hover);
}

slot[name="functions"] {
  display: block;
}

.mode-switch{
  font-size: var(--_font-size-main-nav);
}

.scale-telekom-nav-list[variant='main-nav']>.scale-telekom-nav-item>:where(a,button), .scale-telekom-nav-list[variant='functions']>.scale-telekom-nav-item>:where(a,button), .scale-telekom-nav-list[variant='main-nav']>scale-menu-flyout>.scale-telekom-nav-item>:where(a,button) {
  font-size: var(--_font-size-main-nav);
  line-height: var(--telekom-typography-line-spacing-loose);
  font-weight: var(--telekom-typography-font-weight-extra-bold);
  padding-bottom: var(--_spacing-bottom-slotted-bottom);
}


.clean-btn {
  background: #ffffff48;
  border: none;
  color: var(--telekom-color-text-and-icon-standard);
  cursor: pointer;
  font-family: inherit;
  padding: 0;
}


.menu__caret:before {
  content: '';
  color: var(--telekom-color-text-and-icon-standard);
  background: var(--ifm-menu-link-sublist-icon) 50% / 2rem 2rem;
  filter: var(--ifm-menu-link-sublist-icon-filter);
  height: 1.25rem;
  transform: rotate(180deg);
  width: 1.25rem;
  transition: transform var(--ifm-transition-fast) linear;
}

.breadcrumbs__item {
  display: inline-block;
  color: var(--telekom-color-text-and-icon-standard);
}

.breadcrumbs__item::after {
  background: #ffffff48;
}

.breadcrumbs__item:not(:last-child):after {
  background: var(--ifm-breadcrumb-separator) center;
  color: var(--telekom-color-text-and-icon-standard);
  content: ' ';
  display: inline-block;
  filter: var(--ifm-breadcrumb-separator-filter);
  height: calc(var(--ifm-breadcrumb-separator-size)* var(--ifm-breadcrumb-size-multiplier)* var(--ifm-breadcrumb-separator-size-multiplier));
  margin: 0 var(--ifm-breadcrumb-spacing);
  opacity: 0.5;
  width: calc(var(--ifm-breadcrumb-separator-size)* var(--ifm-breadcrumb-size-multiplier)* var(--ifm-breadcrumb-separator-size-multiplier));
}

.breadcrumbs__link {
  border-radius: var(--ifm-breadcrumb-border-radius);
  color: var(--telekom-color-text-and-icon-standard);
  display: inline-block;
  font-size: calc(1rem * var(--ifm-breadcrumb-size-multiplier));
  padding: calc(var(--ifm-breadcrumb-padding-vertical)* var(--ifm-breadcrumb-size-multiplier)) calc(var(--ifm-breadcrumb-padding-horizontal)* var(--ifm-breadcrumb-size-multiplier));
  transition-property: background, color;
  transition-duration: var(--ifm-transition-fast);
  transition-timing-function: var(--ifm-transition-timing-default);
}


.scale-telekom-header {
  --shadow: 0px 2px 9px rgba(0, 0, 0, 0.15);
  --background: var(--telekom-color-background-surface);
  --background-logo: var(--telekom-color-primary-standard);
  --transition-common-scrolled: height var(--telekom-motion-duration-immediate)
    var(--telekom-motion-easing-standard),
    width var(--telekom-motion-duration-immediate),
    margin var(--telekom-motion-duration-immediate);
  --font-size-app-name: var(--telekom-typography-font-size-body);
  --line-height-app-name: var(--telekom-typography-line-spacing-tight);
  --font-weight-app-name: var(--telekom-typography-font-weight-extra-bold);
  padding: 0px; 
  min-width: 980px; 
}

.scale-telekom-nav-list {
  --width: 100%;
  --height: 100%;
  --spacing-x-start: 0;
  --flex-direction: row;
}

.scale-telekom-nav-item {
  --focus-outline: var(--telekom-line-weight-highlight) solid
    var(--telekom-color-functional-focus-standard);
  --color: var(--telekom-color-text-and-icon-standard); 
}

 :host {
  --font-size: var(--telekom-typography-font-size-caption);
  --font-color: var(--telekom-color-text-and-icon-white-standard);
  --font-size: var(--telekom-typography-font-size-caption);
  --font-color: var(--telekom-color-text-and-icon-white-standard);
  --font-large: var(--telekom-text-style-ui);
  --font-large: var(--telekom-text-style-ui);
  --background-footer: var(--telekom-color-ui-black);
  --background-footer-minimal: var(--telekom-color-background-canvas);
} 


body {
  background-color: var(--telekom-color-background-canvas);
  color: var(--telekom-color-text-and-icon-standard);
  --docusaurus-highlighted-code-line-bg: rgb(0, 0, 0);
  --ifm-code-background: #e20074;
  opacity: 1;
}

#search-bar {
  display: none;
}

.visible {
  display: block;
}

body[data-mode='dark'] .menu__link {
  color: rgb(255, 248, 248);
  flex: 1;
  line-height: 1.25;
}

body[data-mode='dark'] .menu__link--active {
  color: #e20074;
}

body[data-mode='dark'] .table-of-contents__link {
  color: rgb(255, 248, 248);
  display: block;
}
/* ... */

